assets - layouts - static - theme:svg< > assets: h5:: style italic, display:: inline-flex[making the content lose the centered alignment], entry-weight:: 600 to help see but need to add colors to important words next, added .logo-top:: for the fixed logo return to homepage > layouts: baseof.html:: added logo-top to get a button, but need to find a better way, commented out the column space to avoid the off set after the class=row, commented out the id=share as not using it, moved down the entry-title under block main which fixed the display problem ofc layouts: header.html:: added comments< svg: deleted too long svg new SVG file in static/ Move SVG to theme images header: added comments to make sure we don't modify the wrong file

--- a/JB-electricite/assets/css/styles.css
+++ b/JB-electricite/assets/css/styles.css
@@ -46,7 +46,6 @@ body {
   background-repeat: space;
   background-attachment: fixed;
 }
-
 /*********************************************************************
                             NAVigation in HEADER
 **********************************************************************/
@@ -251,6 +250,7 @@ h4 {
 h5 {
   font-size: 20px;
   font-size: 1.25rem;
+  font-style: italic;
 }
 
 a {
@@ -627,7 +627,7 @@ WEBSITE
 **********************************************************************/
 .section-title,
 .entry-title {
-  display: block;
+  display: inline-flex;
   width: 100%;
   overflow: hidden;
   margin: 0px 0 25px;
@@ -708,6 +708,7 @@ WEBSITE
   font-size: 18px;
   color: #000000;
   text-transform:initial;
+  font-weight: 600;
 }
 
 .meta-nav,
@@ -936,6 +937,18 @@ FOOTER
 
 .row {
   margin: 0 0 0px 0;
+  
+}
+
+.logo-top {
+  display: flex;
+  position: fixed ;/* 
+  position: left="200px";
+  position: top="64px"; */
+/*   width: auto;
+  position-top: 136px;
+  position-right: 0px; */
+
 }
 
 #footer a {
